# wesure-demo

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test.py
app/: main.py
app/api/api_v1/: router.py
app/api/api_v1/endpoints/: hello.py  ocr.py  report.py  yd.py
app/core/: config.py
static/: app.js  ocr.js  report.js  yd.js
templates/: index.html  ocr.html  report.html  welcome.html  yd.html
