[tool.poetry]
name = "starter-fastapi-rest"
version = "0.1.0"
description = ""
authors = ["xbmlz <997909544@qq.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"
python-multipart = "^0.0.5"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.950"
autoflake = "^1.3.1"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
